--- a/astro-evolution-website/styles/index.css
+++ b/astro-evolution-website/styles/index.css
@@ -24,6 +24,11 @@ body {
 	position: relative;
 }
 
+a {
+	text-decoration: none;
+	color: black;
+}
+
 
 
 /* Scrollbar */
@@ -134,7 +139,7 @@ body {
 }
 
 .textsection {
-	background-color: #3d3e3d;
+	background-color: #222222;
 	color: white;
 
 	font-family: Arial, Helvetica, sans-serif;
@@ -145,7 +150,7 @@ body {
 }*/
 
 #pictures1 {
-	background-image: url("../assets/earth-in-space.jpg");
+	background-image: url("../assets/scene1.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -153,7 +158,7 @@ body {
 }
 
 #pictures2 {
-	background-image: url("../assets/381-1233891708GdW7.jpg");
+	background-image: url("../assets/scene2.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
