--- a/astro-evolution-website/styles/index.css
+++ b/astro-evolution-website/styles/index.css
@@ -29,6 +29,27 @@ a {
 	color: black;
 }
 
+.fa-play-circle {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	margin: 20px;
+
+	font-size: 60px;
+	color:white;
+
+	text-shadow: 0 0 10px black;
+
+	z-index: 989;
+	transition: 0.7s;
+}
+
+.fa-play-circle:hover {
+	cursor: pointer;
+	transform: scale(1.1);
+
+}
+
 
 
 /* Scrollbar */
@@ -107,6 +128,11 @@ a {
 
 	-webkit-filter: drop-shadow(2px 1px 0 black) drop-shadow(-1px -1px 0 black);
 	filter: drop-shadow(2px 1px 0 black) drop-shadow(-1px -1px 0 black);
+
+}
+
+.arrow:hover {
+	cursor: pointer;
 }
 
 .arrow:focus {
@@ -194,6 +220,45 @@ a {
 	font-size: 30px;
 }
 
+
+/* CONTACT */
+input[type=text], input[type=email], textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+input[type=submit] {
+	background-color: #04AA6D;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	float: right;
+}
+
+input[type=submit]:hover {
+	background-color: #45a049;
+}
+
+textarea {
+	height: 200px;
+}
+
+.container {
+	border-radius: 5px;
+  	padding: 20px;
+}
+footer {
+	display: flex;
+	height: 100px;
+}
 
 /* Media links at bottom navbar */
 #bottomNavbar {
